--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Login | Astro</title>
-        <link rel="stylesheet" href="../estilo/style.css" type="text/css">
-        <link rel="icon" href="../img/icone-astronauta.png">
+        <link rel="stylesheet" href="estilo/style.css" type="text/css">
+        <link rel="icon" href="img/icone-astronauta.png">
     </head>
     <body>
       <div class="main-login">
          <div class="left-login">
             <h1>Faça o login<br>E entre para o nosso time</h1>
-            <img src="../img/Astronaut-bro.png" alt="astronauta" class="left-login-img">
+            <img src="img/Astronaut-bro.png" alt="astronauta" class="left-login-img">
          </div>
         
          <div class="right-login">    
